ADD 前端面试 自动化工具相关

--- a/res/前端面试/1. WEB综合问题.md
+++ b/res/前端面试/1. WEB综合问题.md
@@ -6,6 +6,8 @@ GET | POST | PUT | HEAD | DELETE | OPTIONS | TRACE | CONNECT
 
 - OPTIONS: 它用于获取当前URL所支持的方法。如果请求成功，会有一个Allow的头包含类似“GET,POST”这样的信息
 
+#### 同源策略
+
 #### 从浏览器地址栏输入url到显示页面的步骤
 
 ##### 基础版本
