--- a/res/前端面试/0. 总的流程.md
+++ b/res/前端面试/0. 总的流程.md
@@ -1,5 +1,23 @@
 # 前端面试
 
+## 常见问题
+
+* 自我介绍
+* 如何看待前端开发?
+* 你为什么会选择这个行业，职位?
+* 你有什么职业规划?
+
+* 你们部门的开发流程是怎样的
+* 你认为哪个项目做得最好?
+* 你的项目中技术难点是什么?遇到了什么问题?你是怎么解决的?
+* 说下工作中你做过的一些性能优化处理
+
+* 最近在看哪些前端方面的书?
+* 平时是如何学习前端开发的?
+* 你为什么要离开前一家公司?
+* 你对工资有什么要求?
+* 面试完你还有什么问题要问的吗
+
 ## 总的流程
 
 ![前端面试流程](./res/前端面试.png)
