--- a/res/前端面试/4. JS.md
+++ b/res/前端面试/4. JS.md
@@ -20,6 +20,8 @@
 
 每个对象都会在其内部初始化一个prototype属性, 访问一个对象的属性时, 如果这个对象内部不存在这个属性，那么他就会去prototype里找这个属性, 这个prototype又会有自己的prototype, 一直检索到Object.
 
+- 如何创建一个纯净的对象
+
 #### 哪些方法定义对象
 
 - 对象字面量： var obj = {}
