ADD blog 从一个越写越慢的编辑器中聊聊优化思路 备忘录实现小节

--- a/res/媒体链路/从一个越写越慢的编辑器中聊聊优化思路/从一个越写越慢的编辑器中聊聊优化思路.md
+++ b/res/媒体链路/从一个越写越慢的编辑器中聊聊优化思路/从一个越写越慢的编辑器中聊聊优化思路.md
@@ -51,8 +51,57 @@
 
 ## 缓存解析结果
 
-### 备忘录模式
+缓存解析结果方案, 类似于常见算法题中的备忘录对象. 比如我们要实现一个斐波那契数列的递归函数, 计算`fabi(5)`时需要用到`fabi(3)`和`fabi(4)`的结果, 我们可以尝试从一个缓存对象中获取`fabi(3)`的结果, 如果其已经计算过则不用再次计算了. 推导到我们的解析器, 同样可以创建一个备忘录对象去缓存解析结果.
+
+### 备忘录实现
+
+一开始写解析结果缓存的时候, 笔者在这犯了一个很严重的错误, 那就是想尝试将所有内容以及其解析值缓存到备忘录对象, 如下代码所述:
+
+```JS
+data: {
+  // 备忘录对象
+  memo: {}
+}
+watch: {
+  // 当编辑器的value变动时将尝试直接获取缓存, 如果没有缓存才解析内容
+  value (n, o) {
+    if (this.memo[n]) {
+      this.parsedValue = this.memo[n]
+    } else {
+      this.memo[n] = this.parsedValue = parseMDToHTML(n)
+    }
+  }
+}
+```
+
+代码看起来没什么问题, 因为问题不在代码, 而在内存容量上. 代码运行在浏览器中时, 一般情况下, 内存相对于代码执行速度而言是比较廉价的, 所以备忘录这种`以空间换时间`的代码模式经常使用到, 而且通常还非常好用. 然而这可能带来一个问题, 它使得前端对内存的感知非常有限————因为笔者将整个编辑区域的原始值作为对象的键, 将其解析结果作为值缓存下来————一旦文章长度开始增长, 备忘录对内存的占用将急剧增大.
+
+假设我们有某文章字符长度总量为n, 那么备忘录模型将生长成这个样子:
+
+```JS
+value = '12345...n'
+value.length === n // true
+memo == {
+  1,
+  2,
+  // ...
+  n-1,
+  n
+}
+```
+
+那么可以轻易得出, 文章字符长度(n)和内存消耗(o)的关系形如:
+
+$$o = n(n+1)/2$$
+
+和你想的一样, 笔者浏览器内存爆了😅
+
+不仅如此, 文章不断地增长, 不仅带来内存压力, parseMDToHTML函数每次要处理地内容也变多, 浏览器响应速度也越来越慢.
+
+我们需要更好地解决方案.
 
 ### LRU 以及 LFU 策略
+
+在解析过程简述小节, 我们提到解析器在解析时, 会将MD文本拆分为块状内容进行解析. 由此我们可以尝试缓存块状内容的解析结果到一个全局对象中, 节约CPU算力.
 
 ## 拆分解析内容
